Adicionei um novo paragrafo

--- a/Site-exemplo/Index.html
+++ b/Site-exemplo/Index.html
@@ -13,6 +13,9 @@
         Modi, sapiente aperiam possimus sunt praesentium quia!
         Alias minus consectetur eveniet eius, neque repellat accusamus libero amet,
         praesentium labore nobis at deleniti?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+       Facere consequatur reprehenderit, explicabo nisi tempore fugiat ratione quidem aliquam eaque.
+       Explicabo eaque molestiae harum neque ipsam repellat nemo distinctio, itaque veniam.</p>
     
 </body>
 </html>
